# LearnOpenGL

./: .gitignore  CMakeLists.txt  LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters
resources/: shader.frag  shader.vert
shaders/: shader.frag
src/: main.cpp  shader.h
